--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -414,13 +414,36 @@ PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.Replication=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
+MaterialExpressionNoise.MaterialExpressionNoise=True
+MaterialExpressionNoise.MaterialExpression=True
+MaterialExpressionVertexNormalWS.MaterialExpression=True
+MaterialExpressionAbs.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
+MaterialExpressionWorldPosition.MaterialExpression=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionAppendVector.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
+MaterialExpressionOneMinus.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionDepthFade.MaterialExpressionDepthFade=True
+MaterialExpressionDepthFade.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Thereyago.Thereyago
-OpenAssetsAtExit=/Game/Materials/GlowPink.GlowPink
-OpenAssetsAtExit=/Game/Materials/Glow.Glow
-OpenAssetsAtExit=/Game/Materials/GlowRed.GlowRed
 
 [RootWindow]
 ScreenPosition=X=200.000 Y=145.000
@@ -1288,6 +1311,10 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/SimpleCloud_Inst3.SimpleCloud_Inst3;
+RecentlyPlaced=/Game/Materials/SimpleCloud_Inst.SimpleCloud_Inst;
+RecentlyPlaced=/Game/Materials/SimpleCloud.SimpleCloud;
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/Materials/Glow.Glow;
 RecentlyPlaced=/Game/Materials/GlowPink.GlowPink;
@@ -1317,21 +1344,28 @@ bShowGrid=False
 DestructibleActor=DestructibleActor.Rendering.TextureStreaming,DestructibleActor.Rendering.LOD,
 CapsuleComponent=
 FirstPersonCharacter_C=DestructibleActor.Rendering.TextureStreaming,DestructibleActor.Rendering.LOD,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Cloud Shape,MaterialEditorInstanceConstant.ParameterGroups.Color,MaterialEditorInstanceConstant.ParameterGroups.Displacement,MaterialEditorInstanceConstant.ParameterGroups.Opacity,
+MaterialInstanceConstant=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/GlowRed
-MRUItem1=/Game/Materials/Glow
-MRUItem2=/Game/Materials/GlowPink
-MRUItem3=/Game/Blueprints/Thereyago
-MRUItem4=/Game/Blueprints/LaunchCharacter_Yarbrough
-MRUItem5=/Game/Blueprints/Launch
-MRUItem6=/Game/Materials/GlowGreen
-MRUItem7=/Game/Materials/GlowBlue
-MRUItem8=/Game/Blueprints/1M_Cube_DM
-MRUItem9=/Game/Materials/GlowYellow
-MRUItem10=/Game/Geometry/Meshes/1M_Cube_DM
-MRUItem11=/Game/Materials/Black
-MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
+MRUItem0=/Game/Materials/SimpleCloud_Inst3
+MRUItem1=/Game/Materials/SimpleCloud_Inst2
+MRUItem2=/Game/Materials/SimpleCloud_Inst1
+MRUItem3=/Game/Materials/SimpleCloud_Inst
+MRUItem4=/Game/Materials/SimpleCloud
+MRUItem5=/Game/Materials/GlowRed
+MRUItem6=/Game/Materials/Glow
+MRUItem7=/Game/Materials/GlowPink
+MRUItem8=/Game/Blueprints/Thereyago
+MRUItem9=/Game/Blueprints/LaunchCharacter_Yarbrough
+MRUItem10=/Game/Blueprints/Launch
+MRUItem11=/Game/Materials/GlowGreen
+MRUItem12=/Game/Materials/GlowBlue
+MRUItem13=/Game/Blueprints/1M_Cube_DM
+MRUItem14=/Game/Materials/GlowYellow
+MRUItem15=/Game/Geometry/Meshes/1M_Cube_DM
+MRUItem16=/Game/Materials/Black
+MRUItem17=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
 
 [DetailCategoriesAdvanced]
 DestructibleActor.Physics=True
@@ -1345,6 +1379,7 @@ Object=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
+MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[1].Object.ParameterValue\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM=1
@@ -1353,6 +1388,8 @@ Brush=
 /Game/Materials/GlowYellow.GlowYellow=1
 /Game/Blueprints/Thereyago.Thereyago=1
 /Game/Blueprints/LaunchCharacter_Yarbrough.LaunchCharacter_Yarbrough=1
+/Game/Materials/SimpleCloud.SimpleCloud=1
+/Game/Materials/SimpleCloud_Inst.SimpleCloud_Inst=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1450,4 +1487,9 @@ bMaterialQualityUsed[3]=0
 
 [ColorPickerUI]
 bWheelMode=False
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
